kustomize/apps/helloworld/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helloworld
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
