kustomize/apps/helloworld/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: the-route
spec:
  host: helloworld-kustomize.apps-crc.testing
  port:
    targetPort: 8080
  to:
    kind: Service
    name: the-service
    weight: 100
  wildcardPolicy: None
